Fix gap at bottom of image when page overflows

--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    overflow: hidden;
 }
+
 
 #image-placeholder{
     width: 40vw;
@@ -27,9 +27,6 @@ img{
     object-fit: cover;
 }
 
-#image-place-holder, .par-and-form-background{
-    vertical-align: bottom;
-}
 
 .par-and-form-background{
     background-color: rgb(255, 255, 255);
@@ -51,7 +48,7 @@ img{
     font-family:'Segoe UI', Tahoma,Verdana, sans-serif;
     font-weight: bold;
     position: absolute;
-    background-color: rgb(10, 10, 10, .2);
+    background-color: rgb(10, 10, 10, .5);
     width: 100%;
     height: 100px;
 
@@ -67,11 +64,12 @@ img{
 }
 
 .sign-up-now-par{
-    font-size: 25px; 
+    font-size: 24px; 
     font-weight: bold;
     
    margin: auto;
    padding-top: 40px;
+   max-width: 900px;
 }
 
 .required-asterisk-par{
@@ -81,7 +79,7 @@ img{
 
 .sign-up-now-par, .required-asterisk-par{
     position: relative;
-   left: 10px;
+    left: 10px;
 }
 
 
@@ -119,7 +117,7 @@ ul {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 100px 100px;
 
-    padding: 80px;
+    /*padding: 80px;*/
  
 }
 
@@ -148,7 +146,7 @@ ul {
 
 
 .have-account-par{
-    padding-top: 10px;
+    padding-top: 5px;
     text-align: left; 
 }
 
@@ -211,7 +209,7 @@ footer p{
     }
 
     .sign-up-now-par{
-        max-width: 600px;
+        max-width: 500px;
 
     }
 
